Remove tar.gz file from deployment
This is left over from when this file was POSTed to the cache. There is
no need for it now, and it significantly complicates the code.